# CodePractice

./: .gitignore
Common/CMake/: AddGoogleTest.cmake  toplevel_config.cmake  utility.cmake
Practice/BooksCode/: README.md
Practice/BooksCode/datastruct_deng/: CMakeLists.txt
Practice/BooksCode/datastruct_deng/dependencies/: CMakeLists.txt
Practice/BooksCode/datastruct_deng/packaging/: CMakeLists.txt
Practice/BooksCode/datastruct_deng/src/: CMakeLists.txt  main.cpp
Practice/BooksCode/datastruct_deng/src/sort/: bubbleSort.cpp  bubbleSort.h
Practice/BooksCode/datastruct_deng/tests/: CMakeLists.txt  bubleSortTest.cpp
Practice/Job/: main.cpp
Practice/LeetCode/: CMakeLists.txt  README.md  generate_test
Practice/LeetCode/solutions/: 1.two-sum.cpp  2.add-two-numbers.cpp  3.longest-substring-without-repeating-characters.cpp  4.median-of-two-sorted-arrays.cpp  5.longest-palindromic-substring.cpp  CMakeLists.txt
Practice/LeetCode/template/: 0.template.cpp
Practice/LeetCode/test/: 1.two-sum_test.cpp  2.add-two-numbers_test.cpp  3.longest-substring-without-repeating-characters_test.cpp  4.median-of-two-sorted-arrays_test.cpp
Tests/TestEmbedWindow/: README.md  Resource.h  TestEmbrace.cpp  TestEmbrace.rc  age.cpp  age.sln  age.vcxproj  age.vcxproj.filters  uimainwindow.cpp  uimainwindow.h
